Remove FastestLapsCommand and refactor fastest laps handling in LapService